# HSM-work

./: .gitignore  .hsm_test.c.swp  README.md  demo_hsm_work.sh  demo_plaintext.txt  history.txt  hsm_sign_verify.sh  hsm_test  hsm_test.c  hsm_work_inspection_report.txt  msg.txt  plaintext.txt  run_softhsm_demo.sh  sign_record.json  softhsm2_demo.conf  store_record_in_softhsm.sh
hls-hsm/: CMakeLists.txt
hls-hsm/include/: hsm.h
hls-hsm/src/: hsm.cpp  main.cpp  pqc_demo.cpp
liboqs_test/: CMakeLists.txt  main.c
pkcs11-daemon/: CMakeLists.txt  crypto.cpp  crypto.h  daemon.cpp  pkcs11.cpp  readme.txt  sd_import.cpp  sd_import.h  vault.cpp  vault.h
softhsm-tokens-demo/1676ad3d-1355-9a4b-332c-b3d6b01cf88b/: 0b40747e-8910-6c42-c653-42767645de7d.object  1d86fc6e-a8be-c93c-9c8d-de6271cf5bbb.object  603f6161-9511-26d7-bc49-8a3cf5cf9081.object  954c39b3-8c86-d0c7-5bca-674ebf8dc0af.object  token.object
softhsm-tokens-demo/d14b5561-bf67-9353-aecc-c111ea336ded/: 224cfe0c-2031-9472-c078-14f0ed81edc8.object  3e4e68a4-ca58-2c29-06cd-b4269e4b16e1.object  51d49e97-c832-76d6-84fa-cd8281ba3dc3.object  c107dd42-9f6f-d570-9d10-e9756d220747.object  token.object
